Update Evaluating Market Demand for Smart Pen.ipynb

--- a/Smart Pen Project/Evaluating Market Demand for Smart Pen.ipynb
+++ b/Smart Pen Project/Evaluating Market Demand for Smart Pen.ipynb
@@ -652,7 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 6:** Write a function called `filter_reviews` with one argument called `products` to find all the reviews that match the products which match the key phrase query. It should return a data frame with one review per row and three columns: `product.id`, `rating` (on the 5-star scale), and `review` (text)."
+    "**Step 6:** Write a function called `filter_reviews` with one argument called `products` to find all the reviews that match the products which match the key phrase query. Use this fuction to return a data frame with one review per row and three columns: `product.id`, `rating` (on the 5-star scale), and `review` (text)."
    ]
   },
   {
