--- a/Build A Flappy Bird Intelligent Agent Using NEAT/AI Flappy Bird - NEAT .ipynb
+++ b/Build A Flappy Bird Intelligent Agent Using NEAT/AI Flappy Bird - NEAT .ipynb
@@ -8,6 +8,8 @@
     "\n",
     "In this project, I will use Pygame to build Flappy Bird and apply NEAT algorithm to train an intelligence agent. NEAT, also known as NeuroEvolution of Augmenting Topologies, is a genetic algorithm designed to evolve artificial neural network topologies in an efficient way. It’s an awesome technique developed by Kenneth Stanley in 2002 that addressed some challenges of Topology and Weight Evolving Artiﬁcial Neural Networks (TWEANN). \n",
     "\n",
+    "I published an article for this project on Medium. In this article, I also talk about game development using Pygame and introduce genetic algorithms with some examples. You can check it out here: https://medium.com/@danny25.zhu/how-i-built-an-ai-to-play-flappy-bird-81b672b66521\n",
+    "\n",
     "Danny Zhu\n",
     "\n",
     "May 20, 2020"
